<resources>
    <string name="app_name">App Loja Virtual adm</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="produtos">Produtos</string>
    <string name="pedidos">Pedidos</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="preco">Preço</string>
    <string name="id_produto">Código</string>
    <string name="adiconar">Adicionar Produto</string>
    <string name="codigo">Código 0001</string>
    <string name="atualizar_produto">Atualizar Produto</string>

</resources>