<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FormLogin.FormLogin"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:gravity="center">

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:text=""
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_box"
        />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/senha"
        android:textColorHint="@android:color/darker_gray"
        android:text=""
        android:textColor="@color/black"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_box"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textAllCaps="false"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:background="@drawable/edit_box"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_red_dark"
        android:visibility="invisible"
        />

</LinearLayout>