<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="30dp"
    app:cardElevation="8dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txtIdProduto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codigo"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher"
                android:scaleType="centerCrop"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                />
            <TextView
                android:id="@+id/txtNomeProduto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:layout_marginVertical="20dp"
                android:layout_marginHorizontal="20dp"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/txtPrecoProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preco"
            android:textSize="20sp"
            android:textColor="@android:color/holo_green_dark"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            />

    </LinearLayout>
</androidx.cardview.widget.CardView>