<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CadastroProduto.CadastroProduto"
    android:background="@color/light_gray">

    <ImageView
        android:id="@+id/imgProduto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageButton
        android:id="@+id/btAddImagem"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_image_search"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="@id/imgProduto"
        app:layout_constraintEnd_toEndOf="@+id/imgProduto"
        app:layout_constraintBottom_toBottomOf="@+id/imgProduto"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:textColorHint="@android:color/darker_gray"
        android:text=""
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/imgProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/editPreco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/preco"
        android:textColorHint="@android:color/darker_gray"
        android:text=""
        android:textSize="18sp"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/editNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btAdicionarProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adiconar"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:background="@drawable/edit_box"
        app:layout_constraintTop_toBottomOf="@+id/editPreco"
        android:layout_margin="20dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>